--- a/GettingStartedCQRS/appsettings.json
+++ b/GettingStartedCQRS/appsettings.json
@@ -1,8 +1,20 @@
 {
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Filename=./customer_db.db"
+  },
+  "amqp": {
+    "username": "guest",
+    "password": "guest",
+    "hostname": "localhost",
+    "uri": "amqp://localhost:15672/",
+    "virtualhost": "/"
+  }
 }
